--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -544,6 +544,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">95</p>
+<p class="itemText">How the honourable estate of the King of<span class="Apple-converted-space">  </span>Ethiopia was universally accepted</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now through the KEBRA NAGAST we know and have learned that of a surety the King of Ethiopia is honourable, and that he is the King of Zion, and the firstborn of the seed of Shem, and that the habitation of God is in Zion, and that He there breaketh the might and power of all his enemies and foes. And after him the King of Rômê was the anointed of the Lord because of the wood of the Cross. And as concerning the kingdom o...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">96</p>
