--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -541,6 +541,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">94</p>
+<p class="itemText">The first war of the King of Ethiopia</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And after three months they (i.e. David and his soldiers) rose up to wage war from the city of the Government, with Mâkĕdâ his mother and Zion his Lady. And the Levites carried the Tabernacle of the Law, together with the things that appertained to their office, and they marched along with great majesty, and as in times of old when God on Mount Sinai made Zion to come down in holiness to Moses and Aaron, even so did Azariah and ’Êlmîyâs bear along the Taber...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">95</p>
