--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -538,6 +538,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">93</p>
+<p class="itemText">How the men of Rômê destroyed the Faith</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And after they had waited for three months—now Zion came into the country of Ethiopia at the beginning of the first month in the language of the Hebrews, and in Greek Târmôn and in Gĕ’ĕz (Ethiopic) Mîyâzyâ, on the sixth (or, seventh) day—they wrote down the Law and the names, and they deposited [the writing] for a memorial for the later days, so that what was right should be done for the pavilion [of Zion] thereby, and so that the glory of the kings of Et...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">94</p>
