--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -535,6 +535,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">92</p>
+<p class="itemText">How they renewed the kingdom of David</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Azariah said, “Bring hither the jubilee trumpets, and let us go to Zion, and there we will make new the kingdom of our lord David.” And he took the oil of sovereignty and filled the horn [therewith], and he anointed David with the unguent, that is to say, with the oil of sovereignty. And they blew horns and pipes and trumpets, and beat drums, and sounded all kinds of musical instruments, and there were singing and dancing and games, and [displays] with ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">93</p>
