--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -532,6 +532,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">91</p>
+<p class="itemText">This is what ye shall eat: the clean and the unclean</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“And this is what ye shall eat: the clean and that which is not clean. The ox, the sheep, the goat, the ram, the stag, the gazelle, the buffalo, the deskĕna antelope, the we‘elâ antelope, the oryx, the zĕrât gazelle, and every creature with a cleft hoof and nails eat ye, and the creatures that chew the cud. And these which ye shall not eat among those that chew the cud and have a cleft hoof are the camels and the hare and the kârgĕlyôn (coney...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">92</p>
