--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -526,9 +526,13 @@
 </li>
 <li>
 <p class="topLevelItemTitle">89</p>
+<p class="itemText">How the Queen talked to the Children of Israel</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen answered and said unto them, “Not as servants as ye say, but as a father and a teacher will we treat you. For ye are the guardians of the Law of God, and the guides of the commandment of the God of Israel, and the men of the house of God, and the guardians of Zion, the Tabernacle of the Law of God, and we do not wish to transgress your commandments, for ye shall be unto us a guide to the path of God away from all evil. At your words w...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">90</p>
+<p class="itemText">How Azariah praised the Queen and her city</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Azariah rose up and said unto the Queen, “O our Lady, verily there is no one like unto thee in wisdom and understanding—the which have been given unto thee by God—except my lord the King, who hath brought us unto this land with our Lady Zion, the holy and heavenly Tabernacle of the Law of God. Now we and our fathers of olden time have said, God hath chosen none except the House of Jacob, us hath He chosen, us hath He multiplied, us hath He held to ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">91</p>
