--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -523,6 +523,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">88</p>
+<p class="itemText">How he himself related to his mother how they made him King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“And when these had become silent there rose up the priest who gave us the Commandments, with the fear of God, and he shed tears whilst our bodies quaked and our tears flowed down. God is indeed, without falsehood, in our hearts, and He dwelleth in His commandment. And His commandment is uttered, and it removeth itself not from those who love Him and who keep His commandment, and He is with them continually. And now, hearken to the judg...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">89</p>
