--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -520,6 +520,9 @@
 </li>
 <li>
 <p class="topLevelItemTitle">87</p>
+<p class="itemText">How the nobles (or governors) of Ethiopia took the oath</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen said unto her nobles: “Speak ye now, and swear ye by the heavenly Zion that ye will not make women queens or set them upon the throne of the kingdom of Ethiopia, and that no one except the male seed of David, the son of Solomon the King, shall ever reign over Ethiopia, and that ye will never make women queens.” And all the nobles of the king’s house swore, and the governors, and the councillors, and the administrators.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And s...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">88</p>
