--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -517,6 +517,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">86</p>
+<p class="itemText">How Queen Mâkĕdâ made her son King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And on the third day Mâkĕdâ delivered over to her son seventeen thousand and seven hundred chosen horses, which were to watch the army of the enemy, and would again plunder the cities of the enemy, and seven thousand and seven hundred mares that had borne foals, and one thousand female mules, and seven hundred chosen mules, and apparel of honour, gold and silver measured by the gômôr, and measured by the ḳôr, some six and some seven, and she delivered over to ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">87</p>
