--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -514,6 +514,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">85</p>
+<p class="itemText">Concerning the rejoicing of Queen Mâkedâ</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And David the King came with great pomp unto his mother’s city, and then he saw in the height the heavenly Zion sending forth light like the sun. And when the Queen saw this she gave thanks unto the God of Israel, and praised Him. And she bowed low, and smote her breast, and [then] threw up her head and gazed into the heavens, and thanked her Creator; and she clapped her hands together, and sent forth shouts of laughter from her mouth, and danced on the ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">86</p>
