--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -511,6 +511,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">84</p>
+<p class="itemText">Concerning the King of Ethiopia and how he returned to his country</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the King of Ethiopia returned to his country with great joy and gladness; and marching along with their songs, and their pipes, and their wagons, like an army of heavenly beings, the Ethiopians arrived from Jerusalem at the city of Waḳêrôm in a single day. And they sent messengers in ships to announce [their arrival] to Mâkĕdâ, the Queen of Ethiopia, and to report to her how they had found every good thing, and how her son h...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">85</p>
