--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -508,6 +508,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">83</p>
+<p class="itemText">Concerning the King of the Ishmaelites</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And therefore the children of Ishmael became kings over Tereb, and over Ḳebeṭ, and over Nôbâ, and Sôba, and Kuergue, and Kîfî, and Mâkâ, and Môrnâ, and Fînḳânâ, and ’Arsîbânâ, and Lîbâ, and Mase‘a, for they were the seed of Shem. And Isaac reigned over Judah and over ’Amôrêwôn, and over Kêṭêwôn, and ’Îyâbûsêwôn, and Fêrzêwôn, and ’Eêwêwôn, and Kêḳêdêwôn, and Rômyâ, and ’Anṣôkyâ (Antiochia), and Sôryâ (Syria), and Armenia, and Felesṭeêm (Palestine), and Ethi...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">84</p>
