--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -505,6 +505,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">82</p>
+<p class="itemText">Concerning the going down of Abraham into Egypt</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And we could also inform you that when God had given unto Abraham glory and riches, he lacked a son. And Sârâh and Abraham talked together on their bed, and he said unto her, “Thou art barren,” and she said unto him, “It is not I who am barren but thyself”; and they continued to discuss the matter and to dispute together about it. And there came a famine in the land of Canaan, and Abraham heard that there was some food in the land of Egypt, the co...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">83</p>
