--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -499,6 +499,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">80</p>
+<p class="itemText">Concerning the King of the Philistines</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And behold, the seed of Samson reigned over the Philistines. And Samson was of the seed of Dan, [one] of the twelve sons of Jacob, and he was the son of a handmaiden of Jacob; and we will inform you how this Samson came into being. The Angel of the Lord appeared to the mother of Samson and said unto her, “Keep thyself from all pollution, and company with no man except thy husband, for he who shall be born of thee shall be a Nazarite, holy to the Lord, and ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">81</p>
