--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -504,6 +504,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">81</p>
+<p class="itemText">How the son of Samson slew the son of the King of the Philistines</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now that other son Akamḥêl, the son of Samson, spake unto his mother Delilah, saying, “Why am I not reigning and sitting upon this throne?’ And his mother said unto him, “Cease, my son. This throne did not belong to thy father, and this city was not thy father’s city; when the God of thy father hath let thee grow up thou shalt go to thy father’s throne.” And her son said unto her, “Nay, I will neither forsake thee, my mother, nor ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">82</p>
