--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -496,6 +496,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">79</p>
+<p class="itemText">Concerning the King of Amalek</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And it came to pass that when the elder daughter of Lot had brought forth her son, she said unto the younger daughter, “Come now, let us make our father drink wine, so that thou also mayest company with him that, peradventure, thou mayest get offspring.” And again they prepared wine, and again they spoke to him the words of foolishness, and said unto him, “Drink wine, O our father, so that thy heart may be comforted”; and he, the simple man, drank and became drunk....</p>
 </li>
 <li>
 <p class="topLevelItemTitle">80</p>
