--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -490,9 +490,13 @@
 </li>
 <li>
 <p class="topLevelItemTitle">77</p>
+<p class="itemText">Concerning the King of Persia</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the King of Persia is likewise of the seed of Shem, and we will inform you concerning the matters that relate to him. Judah begot two sons, and he brought in Tĕ‘mâr (Tamar) for his eldest son, and he died. And Judah sent his younger son to her that he might raise up seed to his brother by his brother’s wife. And he did that which God hated, and he did not wish to raise up seed to his brother as his father Judah had commanded him. Now when he lay with Tamar he m...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">78</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">and his daughters made their father to drink wine, and they plotted a wicked plot, and they said, “How (i.e. why) shall the possession of our father be wasted (or, blotted out)? Our mother hath been destroyed on the road, and there is no one to marry us here.” And they made their father drunk, and his elder daughter lay with him whilst his mind was clouded with wine, and Lot the righteous man did not know when his daughter lay with him and when she rose up from him, for his mind was clouded wit...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">79</p>
