--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -487,6 +487,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">76</p>
+<p class="itemText">Concerning lying witnesses</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And there was a certain depraved man of the seed of Benjamin, whose name was Benyâs, who used to lead the mule of the King of Israel, and Karmîn used to feed him, together with the mule of King Manasseh. And among the neighbours of Karmîn there were certain men who were envious of him because of [his] pastures and wells, and because of the multitude of his flocks and herds and servants, for the region [where he had settled] was the inheritance of their fathers, and fo...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">77</p>
