--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -484,6 +484,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">75</p>
+<p class="itemText">Concerning the King of Babylon</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now the King of Babylon is of the seed of Shem, and we will show you clearly that the King of Babylon is of the seed of Shem. It came to pass in days of old that there lived in the kingdom of Manasseh, the King of Israel, a certain man whose name was Karmîn, and he was a fearer of God, and he gave many alms and oblations to the poor of Israel. And when he made offerings to the house of God, he did so with sincerity, and his tithe he gave twofold; and he was good i...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">76</p>
