--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -481,6 +481,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">74</p>
+<p class="itemText">Concerning the King of Medyâm</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The king of Medyâm was of the seed of Shem. For of the seed of Isaac was Esau, who went forth from his mother’s womb with Jacob clinging to the sole of his foot; and Jacob carried away the right of the firstborn from Esau for the sake of a mess of pottage. And the name of Esau’s kingdom was called, according to his name of contempt, “Edom,” for the interpretation of “Edom” is “lentiles”; and because of this the seed of Esau were called “Edomites.” For through the g...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">75</p>
