source chapter 73, cleanup of 72

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -478,6 +478,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">73</p>
+<p class="itemText">Concerning the first judgment of ’Adrâmî, King of Rômê</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And ’Adrâmî said unto them, “Hearken ye to the judgment which I will declare unto you. If the sheep have destroyed all the shoots from the root of the vine, then they all belong to thee. And if they have eaten the leaves of the branches, and the blossoms of the grapes, take the sheep, shear their wool, and [take also] the young of those which have not yet brought forth. But the sheep which have already brought forth young for the first time...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">74</p>
