Adding second introduction from source

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -124,6 +124,12 @@
 <p class="itemText">The Manuscripts of the Kebra Nagast and their arrival in Europe. The labours of Bruce, Dillmann, Praetorius, Wright, Zotenberg, and Bezold. King John’s letter to Lord Granville. Date of compilation of the Kebra Nagast. The Ethiopian work based on Coptic and Arabic sources, etc.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">The Kebra Nagast, or the Book of the Glory of the Kings [of Ethiopia], has been held in the highest esteem and honour throughout the length and breadth of Abyssinia for a thousand years at least, and even to-day it is bel...</p>
 </li>
+<li>
+<p class="itemTitle">2</p>
+<p class="itemText">English translation of the Arabic text describing how the Kingdom of David was transferred from Jerusalem to Ethiopia.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">[Here is] the explanation of the reason for the transfer of the kingdom of David from his son Solomon, King of Israel, to the country of the Negus, that is to say, to Abyssinia.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">When the Lord, praise be unto Him! wished Solomon to build the House of the Lord in Jerusalem, after the death of his father David, the son of Jesse, who had reigned over the children of Israel, and Solo...</p>
+</li>
 </ul>
 <hr class="afterText"/>
 
