Added third intro from source

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -130,8 +130,19 @@
 <p class="itemText"><p class="p1"><span class="s1">[Here is] the explanation of the reason for the transfer of the kingdom of David from his son Solomon, King of Israel, to the country of the Negus, that is to say, to Abyssinia.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">When the Lord, praise be unto Him! wished Solomon to build the House of the Lord in Jerusalem, after the death of his father David, the son of Jesse, who had reigned over the children of Israel, and Solo...</p>
 </li>
+<li>
+<p class="itemTitle">3</p>
+<p class="itemText">Legends of Solomon and the Queen of Sheba in the Kur’ân and in Muhammadan literature</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The author, or editor, of the Kur’ân devoted a considerable section of Surah XXVII to the correspondence that passed between the Queen of Sheba and King Solomon, and to their interviews. Among the many gifts that God bestowed upon Solomon were the understanding of the speech of birds, and knowledge of every kind. He was the lord of men, genii and birds. When he travelled through the air on his magical carpet of ...</p>
+</li>
+<li>
+<p class="itemTitle">4</p>
+</li>
+<li>
+<p class="itemTitle">5</p>
+</li>
 </ul>
-<hr class="afterText"/>
+<hr class="afterTitle"/>
 
 <li>
 <p class="topLevelItemTitle">1</p>
