Add intro 4 from source

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -137,6 +137,8 @@
 </li>
 <li>
 <p class="itemTitle">4</p>
+<p class="itemText">Modern Legends of Solomon and the Queen of Sheba</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A curious and interesting legend of the way in which King Solomon became the father of Menyelek is found in a number of slightly varying versions among many of the tribes of Northern Abyssinia. According to this the mother of Menyelek was a Tigrê girl called Ĕtĕyê Azêb (i.e. Queen of the South), and her people worshipped a dragon or serpent, to which each man in turn had to present as an offering his eldest daughter, and large quantities of sweet ...</p>
 </li>
 <li>
 <p class="itemTitle">5</p>
