Add 5th intro from source sans hieroglyphics

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -142,9 +142,11 @@
 </li>
 <li>
 <p class="itemTitle">5</p>
+<p class="itemText">The Contents of the Kebra Nagast described</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The book opens with an interpretation and explanation of the Three Hundred and Eighteen Orthodox Fathers concerning the children of Adam, and the statement that the Trinity lived in Zion, the Tabernacle of the Law of God, which God made in the fortress of His holiness before He made anything else. The Trinity agreed to make man in God’s image, and the Son agreed to put on the flesh of Adam; man was made to take the place of Satan and to praise God. In d...</p>
 </li>
 </ul>
-<hr class="afterTitle"/>
+<hr class="afterText"/>
 
 <li>
 <p class="topLevelItemTitle">1</p>
