--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -151,7 +151,7 @@
 <li>
 <p class="topLevelItemTitle">1</p>
 <p class="itemText">Concerning the Glory of Kings</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The interpretation and explanation of the Three Hundred and Eighteen Orthodox [Fathers] concerning splendour, and greatness, and dignity, and how God gave them to the children of Adam, and especially concerning the greatness and splendour of Zion, the Tabernacle (tâbot) of the Law of God, of which He Himself is the Maker and Fashioner, in the fortress of His holiness before all created things, [both] angels and men. For the Father, and the Son, and the Holy Spirit w...</p>
+<p class="itemText"><p class="p1"><span class="s1">The interpretation and explanation of the Three Hundred and Eighteen Orthodox [Fathers] concerning splendour, and greatness, and dignity, and how God gave them to the children of Adam, and especially concerning the greatness and splendour of Zion, the Tabernacle (tâbôt) of the Law of God, of which He Himself is the Maker and Fashioner, in the fortress of His holiness before all created things, [both] angels and men. For the Father, and the Son, and the Holy Spirit w...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">2</p>
@@ -172,7 +172,7 @@
 <li>
 <p class="topLevelItemTitle">5</p>
 <p class="itemText">Concerning the Kingdom of Seth</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And Adam died, and Seth reigned in righteousness. And Seth died, and Hênôs (Enos) reigned. And Hênôs (Enos) died, and Kâynân (Cainan) reigned. And Kâynân (Cainan) died, and Malâl’êl (Mahalaleel) reigned. And Malâl’êl (Mahalaleel) died, and Yârôd (Jared) reigned. And Yârôd died, and Hênôkh (Enoch) reigned in righteousness, and he feared God, and [God] hid him so that he might not see death. And he became a king in his flesh in the Land of the Living. And after Enoch...</p>
+<p class="itemText"><p class="p1"><span class="s1">And Adam died, and Seth reigned in righteousness. And Seth died, and Hênôs (Enos) reigned. And Hênôs (Enos) died, and Ḳâynân (Cainan) reigned. And Ḳâynân (Cainan) died, and Malâl’êl (Mahalaleel) reigned. And Malâl’êl (Mahalaleel) died, and Yârôd (Jared) reigned. And Yârôd died, and Hênôkh (Enoch) reigned in righteousness, and he feared God, and [God] hid him so that he might not see death. And he became a king in his flesh in the Land of the Living. And after Enoch...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">6</p>
