--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -212,7 +212,7 @@
 <li>
 <p class="topLevelItemTitle">13</p>
 <p class="itemText">Concerning Abraham</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And Târâ (Terah) begot a son and called him “Abraham” (or, Abram). And when Abraham was twelve years old his father Terah sent him to sell idols. And Abraham said, “These are not gods that can make deliverance”; and he took away the idols to sell even as his father had commanded him. And he said unto those unto whom he would sell them, “Do ye wish to buy gods that cannot make deliverance, [things] made of wood, and stone, and iron, and brass, which the hand of an artificer hat...</p>
+<p class="itemText"><p class="p1"><span class="s1">And Târâ (Terah) begot a son and called him “Abraham” (or, Abrâm). And when Abraham was twelve years old his father Terah sent him to sell idols. And Abraham said, “These are not gods that can make deliverance”; and he took away the idols to sell even as his father had commanded him. And he said unto those unto whom he would sell them, “Do ye wish to buy gods that cannot make deliverance, [things] made of wood, and stone, and iron, and brass, which the hand of an artificer hat...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">14</p>
@@ -242,7 +242,7 @@
 <li>
 <p class="topLevelItemTitle">19</p>
 <p class="itemText">How this Book came to be found</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And Dĕmâtĕyôs (Domitius), the Archbishop of Rôm (i.e. Constantinople, Byzantium), said, “I have found in the Church of [Saint] Sophia among the books and the royal treasures a manuscript [which stated] that the whole kingdom of the world [belonged] to the Emperor of Rom and the Emperor of Ethiopia.”</p>
+<p class="itemText"><p class="p1"><span class="s1">And Dĕmâtĕyôs (Domitius), the Archbishop of Rôm (i.e. Constantinople, Byzantium), said, “I have found in the Church of [Saint] Sophia among the books and the royal treasures a manuscript [which stated] that the whole kingdom of the world [belonged] to the Emperor of Rôm and the Emperor of Ethiopia.”</p>
 </li>
 <li>
 <p class="topLevelItemTitle">20</p>
