--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -273,7 +273,7 @@
 <li>
 <p class="topLevelItemTitle">25</p>
 <p class="itemText">How the Queen came to Solomon the King</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And she arrived in Jerusalem, and brought to the King very many precious gifts which he desired to possess greatly. And he paid her great honour and rejoiced, and he gave her a habitation in the royal palace near him. And he sent her food both for the morning and evening meal, each time fifteen measures by the kôrî of finely ground white meal, cooked with oil and gravy and sauce in abundance, and thirty measures by the kôrî of crushed white meal wherefrom b...</p>
+<p class="itemText"><p class="p1"><span class="s1">And she arrived in Jerusalem, and brought to the King very many precious gifts which he desired to possess greatly. And he paid her great honour and rejoiced, and he gave her a habitation in the royal palace near him. And he sent her food both for the morning and evening meal, each time fifteen measures by the ḳôrî of finely ground white meal, cooked with oil and gravy and sauce in abundance, and thirty measures by the ḳôrî of crushed white meal wherefrom b...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">26</p>
