--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -278,7 +278,7 @@
 <li>
 <p class="topLevelItemTitle">26</p>
 <p class="itemText">How the King held converse with the Queen</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And the Queen Mâkedâ spake unto King Solomon, saying, “Blessed art thou, my lord, in that such wisdom and understanding have been given unto thee. For myself I only wish that I could be as one of the least of thine handmaidens, so that I could wash thy feet, and hearken to thy wisdom, and apprehend thy understanding, and serve thy majesty, and enjoy thy wisdom. O how greatly have pleased me thy answering, and the sweetness of thy voice, and the beauty of...</p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen Mâkĕdâ spake unto King Solomon, saying, “Blessed art thou, my lord, in that such wisdom and understanding have been given unto thee. For myself I only wish that I could be as one of the least of thine handmaidens, so that I could wash thy feet, and hearken to thy wisdom, and apprehend thy understanding, and serve thy majesty, and enjoy thy wisdom. O how greatly have pleased me thy answering, and the sweetness of thy voice, and the beauty of...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">27</p>
@@ -294,7 +294,8 @@
 <p class="topLevelItemTitle">29</p>
 <p class="itemText">Concerning the Three Hundred and Eighteen [Patriarchs]</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">Now we ordain even as did they. We know well what the Apostles who were before us spake. We the Three Hundred and Eighteen have maintained and laid down the orthodox faith, our Lord Jesus Christ being with us. And He hath directed us what we should teach, and how we should fashion the faith.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And King Solomon sent a message unto the Queen, saying, “Now that thou hast come here why wilt thou go away without seeing the administration of the kin...</p>
+<p class="itemText"><p class="p1"><span class="s1">[The Narrative of Solomon and the Queen of Sheba continued]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And King Solomon sent a message unto the Queen, saying, “Now that thou hast come here why wi...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">30</p>
