--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -346,7 +346,7 @@
 <li>
 <p class="topLevelItemTitle">39</p>
 <p class="itemText">How they made the Son of Solomon King</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And they made ready the ointment of the oil of king- ship, and the sounds of the large horn, and the small horn, and the flute and the pipes, and the harp and the drum filled the air; and the city resounded with cries of joy and gladness. And they brought the young man into the Holy of Holies, and he laid hold upon the horns of the altar, and sovereignty was given unto him by the mouth of Zadok the priest, and by the mouth of Joas (Benaiah) the priest, the c...</p>
+<p class="itemText"><p class="p1"><span class="s1">And they made ready the ointment of the oil of kingship, and the sounds of the large horn, and the small horn, and the flute and the pipes, and the harp and the drum filled the air; and the city resounded with cries of joy and gladness. And they brought the young man into the Holy of Holies, and he laid hold upon the horns of the altar, and sovereignty was given unto him by the mouth of Zadok the priest, and by the mouth of Joas (Benaiah) the priest, the com...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">40</p>
