Fix empty spaces before question and exclamation marks, colons, and semi-colons

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -207,7 +207,7 @@
 <li>
 <p class="topLevelItemTitle">12</p>
 <p class="itemText">Concerning Canaan</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Now, it was Canaan who rent the kingdom from the children of Shem, and he transgressed the oath which his father Noah had made them to swear. And the sons of Canaan were seven mighty men, and he took seven mighty cities from the land of Shem, and set his sons over them ; and likewise he also made his own portion double. And in later days God took vengeance upon the sons of Canaan, and made the sons of Shem to inherit their country. These are the nations whom they inherited : th...</p>
+<p class="itemText"><p class="p1"><span class="s1">Now, it was Canaan who rent the kingdom from the children of Shem, and he transgressed the oath which his father Noah had made them to swear. And the sons of Canaan were seven mighty men, and he took seven mighty cities from the land of Shem, and set his sons over them; and likewise he also made his own portion double. And in later days God took vengeance upon the sons of Canaan, and made the sons of Shem to inherit their country. These are the nations whom they inherited : the...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">13</p>
@@ -217,7 +217,7 @@
 <li>
 <p class="topLevelItemTitle">14</p>
 <p class="itemText">Concerning the Covenant of Abraham</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And God held converse with Abrâm, and He said unto him, “Fear thou not. From this day thou art My servant, and I will establish My Covenant with thee and with thy seed after thee, and I will multiply thy seed, and I will magnify thy name exceedingly. And I will bring down the Tabernacle of My Covenant upon the earth seven generations after thee, and it shall go round about with thy seed, and shall be salvation unto thy race ; and afterwards I will send My Word ...</p>
+<p class="itemText"><p class="p1"><span class="s1">And God held converse with Abrâm, and He said unto him, “Fear thou not. From this day thou art My servant, and I will establish My Covenant with thee and with thy seed after thee, and I will multiply thy seed, and I will magnify thy name exceedingly. And I will bring down the Tabernacle of My Covenant upon the earth seven generations after thee, and it shall go round about with thy seed, and shall be salvation unto thy race; and afterwards I will send My Word f...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">15</p>
@@ -451,7 +451,7 @@
 <li>
 <p class="topLevelItemTitle">60</p>
 <p class="itemText">How Solomon Lamented for Zion</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And Solomon entered into his tent, and wept bitterly, and said, “O God, willest Thou to take away the Tabernacle of Thy Covenant from us in my days ? If only Thou hadst taken away my life before this which Thou hast taken away in my days! For Thou canst not make Thy word to be a lie, and Thou canst not break Thy Covenant which Thou didst make with our fathers, with Noah Thy servant who kept righteousness, and with Abraham who did not transgress Thy commandment, and ...</p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon entered into his tent, and wept bitterly, and said, “O God, willest Thou to take away the Tabernacle of Thy Covenant from us in my days? If only Thou hadst taken away my life before this which Thou hast taken away in my days! For Thou canst not make Thy word to be a lie, and Thou canst not break Thy Covenant which Thou didst make with our fathers, with Noah Thy servant who kept righteousness, and with Abraham who did not transgress Thy commandment, and w...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">61</p>
