Small Caps for KN and further punctuation cleanup

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -662,7 +662,7 @@
 <li>
 <p class="topLevelItemTitle">102</p>
 <p class="itemText">Concerning the Beginning</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">As David prophesied by the mouth of the Holy Spirit, saying, “With Thee was the headship on the day of might.” Now what do these words, “day of might” mean? Is it not the day whereon Christ, the Word of the Father, created heaven and earth? For Moses saith in the beginning of the Book, “In the beginning God made the heavens and the earth.” Understand then “In the beginning” meaneth “in Christ”; the interpretation of “beginning ” is Christ. John the Apostle, the son of Ze...</p>
+<p class="itemText"><p class="p1"><span class="s1">As David prophesied by the mouth of the Holy Spirit, saying, “With Thee was the headship on the day of might.” Now what do these words, “day of might” mean? Is it not the day whereon Christ, the Word of the Father, created heaven and earth? For Moses saith in the beginning of the Book, “In the beginning God made the heavens and the earth.” Understand then “In the beginning” meaneth “in Christ”; the interpretation of “beginning” is Christ. John the Apostle, the son of Zeb...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">103</p>
