Added 1932 intro with Noto San Old South Arabian characters (instead of images), cleaned up punctuation, and inline footnotes

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -105,11 +105,13 @@
 </li>
 <li>
 <p class="itemTitle">Preface to the 1932 edition</p>
+<p class="itemText">PREFACE TO THE 1932 EDITION</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">WHEN the English translation of the “Book of the Glory of Kings” appeared in 1922 it received a generous welcome from the gentlemen of the Press, and the approval of it by the public generally was shown by the fact that within two months from the day of publication a reprint was called for. The amusing and interesting character of the book which piles up fancy tales, fables, legends, folk-lore, dogma, mysticism and pious remarks on a substratum of historical fact was ...</p>
 </li>
 <li>
 <p class="itemTitle">Preface to the 1922 edition</p>
-<p class="itemText">Preface to the 1922 edition</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">This volume contains a complete English translation of the famous Ethiopian work, The “Kebra Nagast,” i.e. the “Glory of the Kings [of Ethiopia].” This work has been held in peculiar honour in Abyssinia for several centuries, and throughout that country it has been, and still is, venerated by the people as containing the final proof of their descent from the Hebrew Patriarchs, and of the kinship of their kings of the Solomonic line with Christ, the Son of God. The imp...</p>
+<p class="itemText">PREFACE TO THE 1922 EDITION</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">This volume contains a complete English translation of the famous Ethiopian work, The “KEBRA NAGAST,” i.e. the “Glory of the Kings [of Ethiopia].” This work has been held in peculiar honour in Abyssinia for several centuries, and throughout that country it has been, and still is, venerated by the people as containing the final proof of their descent from the Hebrew Patriarchs, and of the kinship of their kings of the Solomonic line with Christ, the Son of God. The imp...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -122,7 +124,7 @@
 <li>
 <p class="itemTitle">1</p>
 <p class="itemText">The Manuscripts of the Kebra Nagast and their arrival in Europe. The labours of Bruce, Dillmann, Praetorius, Wright, Zotenberg, and Bezold. King John’s letter to Lord Granville. Date of compilation of the Kebra Nagast. The Ethiopian work based on Coptic and Arabic sources, etc.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The Kebra Nagast, or the Book of the Glory of the Kings [of Ethiopia], has been held in the highest esteem and honour throughout the length and breadth of Abyssinia for a thousand years at least, and even to-day it is bel...</p>
+<p class="itemText"><p class="p1"><span class="s1">The KEBRA NAGAST, or the Book of the Glory of the Kings [of Ethiopia], has been held in the highest esteem and honour throughout the length and breadth of Abyssinia for a thousand years at least, and even to-day it is bel...</p>
 </li>
 <li>
 <p class="itemTitle">2</p>
